doc: fix font issue and add favicon (#43)
* feat: landing page

Contains initial structure of the page with the logo, the github
redirection and a simulation of a terminal running the app

**Next steps:**
- Add text content to present the product
- Fix the responsive layout issues
- Define a definitive grid layout (which component goes where and how
  much place it takes)

* doc: create landing page

Landing page creation with a terminal simulation, redirection buttons to
the used technologies and descriptive of the project

* doc: update filepath to landing page source files

Move files from .github to newly created docs directory

Will move files from doc to docs in future PR

* doc: fix font issue and add favicon

Font should now be loaded from the cdn

Add of a honeypot as favicon

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Fira Code Variable';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 300 700;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/fira-code:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
 body {
   display: grid;
   grid-template-columns: 1fr;
@@ -62,7 +71,9 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: 'FiraCode Nerd Font';
+
+  font-family: 'Fira Code Variable';
+
   font-size: clamp(4px, 2.5cqw, 40px);
   font-weight: bold;
 
@@ -272,7 +283,7 @@ body {
   align-items: center;
   justify-content: left;
   text-align: left;
-  font-family: 'FiraCode Nerd Font';
+  font-family: 'Fira Code Variable';
   font-size: clamp(4px, 2.5cqw, 40px);
   font-weight: bold;
 }
@@ -288,7 +299,8 @@ body {
   align-items: center;
   justify-content: left;
   text-align: left;
-  font-family: 'FiraCode Nerd Font';
+
+  font-family: 'Fira Code Variable';
   font-size: clamp(4px, 1.5cqw, 20px);
   font-weight: bold;
 }
@@ -302,7 +314,7 @@ body {
     "authors-title authors-title"
     "drin esteban"
     "aubry nils";
-  font-family: 'FiraCode Nerd Font';
+  font-family: 'Fira Code Variable';
   gap: 15px;
   padding: 20px;
   justify-items: left;
@@ -329,7 +341,7 @@ body {
   align-items: left;
   justify-content: left;
   text-align: left;
-  font-family: 'FiraCode Nerd Font'
+  font-family: 'Fira Code Variable';
 }
 
 .first-desc li::first-letter {
